--- a/Game1/Game1.vcxproj.filters
+++ b/Game1/Game1.vcxproj.filters
@@ -23,4 +23,7 @@
       <UniqueIdentifier>{e0c428c6-0d94-4784-bb3a-59d8180b610b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="window.ini" />
+  </ItemGroup>
 </Project>
