--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=-532,72
+ViewportPos=1430,101
 ViewportId=0xA4D966FE
 Size=488,451
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=-532,72
+ViewportPos=1430,101
 ViewportId=0xA4D966FE
 Pos=0,453
 Size=488,441
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=-532,72
+ViewportPos=1430,101
 ViewportId=0xA4D966FE
 Size=488,451
 Collapsed=0
@@ -34,11 +34,13 @@ Collapsed=0
 Pos=60,60
 Size=487,424
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Load Shader##0]
 Pos=60,60
 Size=538,243
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Load Actor##1]
 Pos=60,60
@@ -64,6 +66,7 @@ Collapsed=0
 Pos=64,53
 Size=495,332
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Load Actor##2]
 Pos=60,60
@@ -474,8 +477,47 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x75A989C8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x29C5A20C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9EEF46F7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE054D9C1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0F1E2FC7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x107BB323,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x19F002D7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF2B6CDE8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x459C2913,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=-532,72 Size=488,894 Split=Y
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,134 Selected=0x29EABFBD
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,131 Selected=0xBC4FCFE6
+DockNode    ID=0x00000001 Pos=1430,101 Size=488,894 Split=Y
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
+DockNode    ID=0x00000004 Pos=424,91 Size=538,243 Selected=0xBB002C54
+DockNode    ID=0x00000005 Pos=428,84 Size=495,332 Selected=0x5BD986A8
+DockNode    ID=0x00000006 Pos=424,91 Size=487,424 Selected=0x1F642F5F
 
