--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=1596,68
-Size=262,451
+Pos=1241,68
+Size=617,451
 Collapsed=0
 DockId=0x00000003,0
 
@@ -10,14 +10,14 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-Pos=1596,521
-Size=262,441
+Pos=1241,521
+Size=617,441
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-Pos=1596,68
-Size=262,451
+Pos=1241,68
+Size=617,451
 Collapsed=0
 DockId=0x00000003,1
 
@@ -50,6 +50,7 @@ Collapsed=0
 Pos=233,59
 Size=672,369
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Save Actor##2]
 Pos=60,61
@@ -562,8 +563,13 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xBBAF3047,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1596,91 Size=262,894 Split=Y
+DockNode    ID=0x00000001 Pos=1241,91 Size=617,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
+DockNode    ID=0x00000004 Pos=233,82 Size=672,369 Selected=0x5EDE2CCE
 
