--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=1430,101
+ViewportPos=1182,10
 ViewportId=0xA4D966FE
-Size=488,451
+Size=393,403
 Collapsed=0
 DockId=0x00000003,0
 
@@ -11,17 +11,17 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1430,101
+ViewportPos=1182,10
 ViewportId=0xA4D966FE
-Pos=0,453
-Size=488,441
+Pos=0,405
+Size=393,394
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1430,101
+ViewportPos=1182,10
 ViewportId=0xA4D966FE
-Size=488,451
+Size=393,403
 Collapsed=0
 DockId=0x00000003,1
 
@@ -34,13 +34,11 @@ Collapsed=0
 Pos=60,60
 Size=487,424
 Collapsed=0
-DockId=0x00000006,0
 
 [Window][Load Shader##0]
 Pos=60,60
 Size=538,243
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Load Actor##1]
 Pos=60,60
@@ -53,7 +51,7 @@ Size=542,341
 Collapsed=0
 
 [Window][Save Actor##0]
-Pos=233,59
+Pos=471,49
 Size=672,369
 Collapsed=0
 
@@ -63,10 +61,9 @@ Size=460,301
 Collapsed=0
 
 [Window][Load texture##0]
-Pos=64,53
+Pos=65,46
 Size=495,332
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Load Actor##2]
 Pos=60,60
@@ -513,11 +510,120 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x2796121C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4DEE1244,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6EFFC635,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3293EDF1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD9D522CE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF6802C8F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAAEC074B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x32DF3906,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6EB312C2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8E8DAA01,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD999F639,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC867D3FF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x25E976E1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8F6F2B49,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD303008D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3845CFB2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6F51938A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x46FE5084,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF73D21A6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x48C955B6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x14A57E72,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEE1D948B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5DF35BB5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x019F7071,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEAD9BF4E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFB279A88,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x11A92F0A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x71CAF396,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1430,101 Size=488,894 Split=Y
+DockNode    ID=0x00000001 Pos=1182,10 Size=393,799 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
-DockNode    ID=0x00000004 Pos=424,91 Size=538,243 Selected=0xBB002C54
-DockNode    ID=0x00000005 Pos=428,84 Size=495,332 Selected=0x5BD986A8
-DockNode    ID=0x00000006 Pos=424,91 Size=487,424 Selected=0x1F642F5F
 
