--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=1241,68
+ViewportPos=1197,127
+ViewportId=0xA4D966FE
 Size=617,451
 Collapsed=0
 DockId=0x00000003,0
@@ -10,13 +11,16 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-Pos=1241,521
+ViewportPos=1197,127
+ViewportId=0xA4D966FE
+Pos=0,453
 Size=617,441
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-Pos=1241,68
+ViewportPos=1197,127
+ViewportId=0xA4D966FE
 Size=617,451
 Collapsed=0
 DockId=0x00000003,1
@@ -567,9 +571,69 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xE3236F34,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x212F20B6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCA69EF89,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7D430B72,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDB97CA4F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x96C3C0ED,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x734FE03E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x98092F01,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC46504C5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD3A67E91,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x38E0B1AE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x648C9A6A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC2585B57,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5BD27EEB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEAE504E2,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1241,91 Size=617,894 Split=Y
+DockNode    ID=0x00000001 Pos=1197,127 Size=617,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
-DockNode    ID=0x00000004 Pos=233,82 Size=672,369 Selected=0x5EDE2CCE
+DockNode    ID=0x00000004 Pos=513,166 Size=672,369 Selected=0x5EDE2CCE
 
