--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,6 +1,7 @@
 [Window][Debug##Default]
-Pos=1409,68
-Size=449,451
+ViewportPos=1088,22
+ViewportId=0xA4D966FE
+Size=449,399
 Collapsed=0
 DockId=0x00000003,0
 
@@ -10,14 +11,17 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-Pos=1409,521
-Size=449,441
+ViewportPos=1088,22
+ViewportId=0xA4D966FE
+Pos=0,401
+Size=449,391
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-Pos=1409,68
-Size=449,451
+ViewportPos=1088,22
+ViewportId=0xA4D966FE
+Size=449,399
 Collapsed=0
 DockId=0x00000003,1
 
@@ -566,8 +570,32 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xF14DAA19,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCCF875A6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5B77FFA4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x88779A89,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5739203A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB0B8F5CB,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1409,91 Size=449,894 Split=Y
+DockNode    ID=0x00000001 Pos=1088,22 Size=449,792 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
 
