--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1197,127
+ViewportPos=1276,117
 ViewportId=0xA4D966FE
 Size=617,451
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1197,127
+ViewportPos=1276,117
 ViewportId=0xA4D966FE
 Pos=0,453
 Size=617,441
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1197,127
+ViewportPos=1276,117
 ViewportId=0xA4D966FE
 Size=617,451
 Collapsed=0
@@ -630,8 +630,32 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xC4C2215A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x98AE0A9E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x73E8C5A1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6216E067,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x32D57CF9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD43A16B7,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1197,127 Size=617,894 Split=Y
+DockNode    ID=0x00000001 Pos=1276,117 Size=617,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
 
