--- a/Game1/Game1.vcxproj.filters
+++ b/Game1/Game1.vcxproj.filters
@@ -6,22 +6,26 @@
     <ClInclude Include="Fruit.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Map.h">
-      <Filter>GameObject</Filter>
-    </ClInclude>
     <ClInclude Include="Player.h" />
-    <ClInclude Include="WallMap.h" />
+    <ClInclude Include="WallMap.h">
+      <Filter>GameObject\Map</Filter>
+    </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>GameObject\Map</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Fruit.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="Map.cpp">
-      <Filter>GameObject</Filter>
-    </ClCompile>
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="WallMap.cpp" />
+    <ClCompile Include="WallMap.cpp">
+      <Filter>GameObject\Map</Filter>
+    </ClCompile>
+    <ClCompile Include="Map.cpp">
+      <Filter>GameObject\Map</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="GameObject">
@@ -29,6 +33,9 @@
     </Filter>
     <Filter Include="Scene">
       <UniqueIdentifier>{e0c428c6-0d94-4784-bb3a-59d8180b610b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject\Map">
+      <UniqueIdentifier>{354aeaf7-b5f1-4bcc-8328-24fe107c5145}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
