--- a/2DFrameWork/2DFrameWork.vcxproj.filters
+++ b/2DFrameWork/2DFrameWork.vcxproj.filters
@@ -83,6 +83,7 @@
     <ClInclude Include="BlendState.h">
       <Filter>State</Filter>
     </ClInclude>
+    <ClInclude Include="GameManager.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="System">
@@ -186,5 +187,6 @@
     <ClCompile Include="BlendState.cpp">
       <Filter>State</Filter>
     </ClCompile>
+    <ClCompile Include="GameManager.cpp" />
   </ItemGroup>
 </Project>
