--- a/Game1/Game1.vcxproj.filters
+++ b/Game1/Game1.vcxproj.filters
@@ -13,6 +13,9 @@
     <ClInclude Include="Map.h">
       <Filter>GameObject\Map</Filter>
     </ClInclude>
+    <ClInclude Include="Obstacle.h" />
+    <ClInclude Include="Obstacle1.h" />
+    <ClInclude Include="Obstacle2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
@@ -26,6 +29,9 @@
     <ClCompile Include="Map.cpp">
       <Filter>GameObject\Map</Filter>
     </ClCompile>
+    <ClCompile Include="Obstacle.cpp" />
+    <ClCompile Include="Obstacle1.cpp" />
+    <ClCompile Include="Obstacle2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="GameObject">
