--- a/Game1/Game1.vcxproj
+++ b/Game1/Game1.vcxproj
@@ -26,6 +26,9 @@
     <ClInclude Include="Obstacle1.h" />
     <ClInclude Include="Obstacle2.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Scene1.h" />
+    <ClInclude Include="Scene2.h" />
+    <ClInclude Include="SceneIntro.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="WallMap.h" />
   </ItemGroup>
@@ -37,6 +40,9 @@
     <ClCompile Include="Obstacle1.cpp" />
     <ClCompile Include="Obstacle2.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Scene1.cpp" />
+    <ClCompile Include="Scene2.cpp" />
+    <ClCompile Include="SceneIntro.cpp" />
     <ClCompile Include="WallMap.cpp" />
   </ItemGroup>
   <ItemGroup>
