--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1088,22
+ViewportPos=1016,22
 ViewportId=0xA4D966FE
 Size=449,399
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1088,22
+ViewportPos=1016,22
 ViewportId=0xA4D966FE
 Pos=0,401
 Size=449,391
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1088,22
+ViewportPos=1016,22
 ViewportId=0xA4D966FE
 Size=449,399
 Collapsed=0
@@ -594,8 +594,24 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x6DA9228F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x31C5094B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDA83C674,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCB7DE3B2,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1088,22 Size=449,792 Split=Y
+DockNode    ID=0x00000001 Pos=1016,22 Size=449,792 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
 
