--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1276,117
+ViewportPos=1173,113
 ViewportId=0xA4D966FE
 Size=617,451
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1276,117
+ViewportPos=1173,113
 ViewportId=0xA4D966FE
 Pos=0,453
 Size=617,441
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1276,117
+ViewportPos=1173,113
 ViewportId=0xA4D966FE
 Size=617,451
 Collapsed=0
@@ -31,7 +31,7 @@ Size=606,442
 Collapsed=0
 
 [Window][Load Mesh##1]
-Pos=60,60
+Pos=60,61
 Size=487,424
 Collapsed=0
 
@@ -51,9 +51,11 @@ Size=542,341
 Collapsed=0
 
 [Window][Save Actor##0]
-Pos=233,59
+ViewportPos=513,166
+ViewportId=0xD4B39271
 Size=672,369
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Save Actor##2]
 Pos=60,61
@@ -654,8 +656,73 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xAC3303C9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4775CCF6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF05F280D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x568BE930,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x342A8B00,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8EAE5E8B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x36484C6B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xDD0E8354,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8162A890,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x27B669AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x25936E5E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x827A1AED,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x40776487,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6F2065DC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAE60E3B4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x49720707,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1276,117 Size=617,894 Split=Y
+DockNode    ID=0x00000001 Pos=1173,113 Size=617,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
+DockNode    ID=0x00000004 Pos=513,166 Size=672,369 Selected=0x5EDE2CCE
 
