wallmap 클래스 수정, map.xml 파일 수정

--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=1173,113
+ViewportPos=1406,116
 ViewportId=0xA4D966FE
-Size=617,451
+Size=438,451
 Collapsed=0
 DockId=0x00000003,0
 
@@ -11,17 +11,17 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1173,113
+ViewportPos=1406,116
 ViewportId=0xA4D966FE
 Pos=0,453
-Size=617,441
+Size=438,441
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1173,113
+ViewportPos=1406,116
 ViewportId=0xA4D966FE
-Size=617,451
+Size=438,451
 Collapsed=0
 DockId=0x00000003,1
 
@@ -31,12 +31,12 @@ Size=606,442
 Collapsed=0
 
 [Window][Load Mesh##1]
-Pos=60,61
+Pos=312,146
 Size=487,424
 Collapsed=0
 
 [Window][Load Shader##0]
-Pos=60,60
+Pos=312,145
 Size=538,243
 Collapsed=0
 
@@ -51,11 +51,9 @@ Size=542,341
 Collapsed=0
 
 [Window][Save Actor##0]
-ViewportPos=513,166
-ViewportId=0xD4B39271
+Pos=485,144
 Size=672,369
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Save Actor##2]
 Pos=60,61
@@ -63,7 +61,7 @@ Size=460,301
 Collapsed=0
 
 [Window][Load texture##0]
-Pos=64,53
+Pos=311,136
 Size=495,332
 Collapsed=0
 
@@ -720,9 +718,100 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xEF6F3DB3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x331BDD16,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6F77F6D2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD85D1229,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC9A337EF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x52301F01,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB976D03E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE51AFBFA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x43CE3AC7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9743DC6D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x86BDF9AB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6DFB3694,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x31971D50,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x646EC0AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9ED62A54,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7590E56B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC2BA0190,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCF2A0782,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7A28A9B4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9EEED3B9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x75A81C86,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x29C43742,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8F10F67F,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1173,113 Size=617,894 Split=Y
+DockNode    ID=0x00000001 Pos=1406,116 Size=438,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
-DockNode    ID=0x00000004 Pos=513,166 Size=672,369 Selected=0x5EDE2CCE
 
