--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1408,97
+ViewportPos=1484,144
 ViewportId=0xA4D966FE
 Size=438,451
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1408,97
+ViewportPos=1484,144
 ViewportId=0xA4D966FE
 Pos=0,453
 Size=438,441
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1408,97
+ViewportPos=1484,144
 ViewportId=0xA4D966FE
 Size=438,451
 Collapsed=0
@@ -815,8 +815,28 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x82360C8A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x995C22C6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBBC5FE82,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE91CACD3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x03BA5044,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1408,97 Size=438,894 Split=Y
+DockNode    ID=0x00000001 Pos=1484,144 Size=438,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
 DockNode    ID=0x00000004 Pos=737,252 Size=672,369 Selected=0x5EDE2CCE
