--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1484,144
+ViewportPos=1573,132
 ViewportId=0xA4D966FE
 Size=438,451
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1484,144
+ViewportPos=1573,132
 ViewportId=0xA4D966FE
 Pos=0,453
 Size=438,441
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1484,144
+ViewportPos=1573,132
 ViewportId=0xA4D966FE
 Size=438,451
 Collapsed=0
@@ -54,7 +54,6 @@ Collapsed=0
 Pos=485,144
 Size=672,369
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Save Actor##2]
 Pos=60,61
@@ -835,9 +834,20 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xABDBDC1B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x11D98538,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC226B173,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1484,144 Size=438,894 Split=Y
+DockNode    ID=0x00000001 Pos=1573,132 Size=438,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
-DockNode    ID=0x00000004 Pos=737,252 Size=672,369 Selected=0x5EDE2CCE
 
