--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1573,132
+ViewportPos=1411,117
 ViewportId=0xA4D966FE
 Size=438,451
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1573,132
+ViewportPos=1411,117
 ViewportId=0xA4D966FE
 Pos=0,453
 Size=438,441
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1573,132
+ViewportPos=1411,117
 ViewportId=0xA4D966FE
 Size=438,451
 Collapsed=0
@@ -61,7 +61,7 @@ Size=460,301
 Collapsed=0
 
 [Window][Load texture##0]
-Pos=311,136
+Pos=312,133
 Size=495,332
 Collapsed=0
 
@@ -846,8 +846,40 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x7D59801A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x961F4F25,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCA7364E1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6CA7A5DC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1D59FA69,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF61F3556,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAA731E92,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0CA7DFAF,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1573,132 Size=438,894 Split=Y
+DockNode    ID=0x00000001 Pos=1411,117 Size=438,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
 
