--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=1090,59
+ViewportPos=1069,46
 ViewportId=0xA4D966FE
-Size=449,399
+Size=428,399
 Collapsed=0
 DockId=0x00000003,0
 
@@ -11,19 +11,19 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1090,59
+ViewportPos=1069,46
 ViewportId=0xA4D966FE
 Pos=0,401
-Size=449,391
+Size=428,391
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1090,59
-ViewportId=0xA4D966FE
-Size=449,399
+ViewportPos=1090,89
+ViewportId=0xD4B39271
+Size=444,399
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000004,0
 
 [Window][Save Mesh##0]
 Pos=60,60
@@ -626,8 +626,17 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x44E44E8F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x551A6B49,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1090,59 Size=449,792 Split=Y
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
+DockNode    ID=0x00000001 Pos=1069,46 Size=428,792 Split=Y
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x55954704
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
+DockNode    ID=0x00000004 Pos=1090,89 Size=444,399 Selected=0x29EABFBD
 
