--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -54,6 +54,7 @@ Collapsed=0
 Pos=485,144
 Size=672,369
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Save Actor##2]
 Pos=60,61
@@ -878,8 +879,13 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x82029CB8,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=1411,117 Size=438,894 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
+DockNode    ID=0x00000004 Pos=737,252 Size=672,369 Selected=0x5EDE2CCE
 
