--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=1411,117
+ViewportPos=1355,94
 ViewportId=0xA4D966FE
-Size=438,451
+Size=438,439
 Collapsed=0
 DockId=0x00000003,0
 
@@ -11,17 +11,17 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1411,117
+ViewportPos=1355,94
 ViewportId=0xA4D966FE
-Pos=0,453
-Size=438,441
+Pos=0,441
+Size=438,430
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1411,117
+ViewportPos=1355,94
 ViewportId=0xA4D966FE
-Size=438,451
+Size=438,439
 Collapsed=0
 DockId=0x00000003,1
 
@@ -46,9 +46,10 @@ Size=650,472
 Collapsed=0
 
 [Window][Save Actor##1]
-Pos=60,60
+Pos=218,255
 Size=542,341
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Save Actor##0]
 Pos=485,144
@@ -61,9 +62,10 @@ Size=460,301
 Collapsed=0
 
 [Window][Load texture##0]
-Pos=312,133
+Pos=881,578
 Size=495,332
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Load Actor##2]
 Pos=60,60
@@ -882,8 +884,18 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x3F684196,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7C4F3601,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1411,117 Size=438,894 Split=Y
+DockNode    ID=0x00000001 Pos=1355,94 Size=438,871 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
+DockNode    ID=0x00000004 Pos=809,534 Size=495,332 Selected=0x5BD986A8
+DockNode    ID=0x00000005 Pos=60,83 Size=542,341 Selected=0x63BE057E
 
