--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -634,6 +634,10 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x1724E4F7,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
 DockNode    ID=0x00000001 Pos=1103,61 Size=449,792 Split=Y
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
