scintro/sc1 룸,바닥 추가

--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,9 +1,10 @@
 [Window][Debug##Default]
-ViewportPos=1069,46
-ViewportId=0xA4D966FE
-Size=428,399
+ViewportPos=1117,27
+ViewportId=0x4AD707D2
+Pos=0,235
+Size=428,127
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Window][System]
 Pos=7,256
@@ -11,19 +12,19 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1069,46
-ViewportId=0xA4D966FE
-Pos=0,401
-Size=428,391
+ViewportPos=1117,27
+ViewportId=0x4AD707D2
+Pos=0,364
+Size=428,356
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Hierarchy]
-ViewportPos=1090,89
-ViewportId=0xD4B39271
-Size=444,399
+ViewportPos=1117,27
+ViewportId=0x4AD707D2
+Size=428,233
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][Save Mesh##0]
 Pos=60,60
@@ -31,12 +32,12 @@ Size=606,442
 Collapsed=0
 
 [Window][Load Mesh##1]
-Pos=60,60
+Pos=191,82
 Size=487,424
 Collapsed=0
 
 [Window][Load Shader##0]
-Pos=60,60
+Pos=191,82
 Size=538,243
 Collapsed=0
 
@@ -51,7 +52,8 @@ Size=542,341
 Collapsed=0
 
 [Window][Save Actor##0]
-Pos=233,59
+ViewportPos=625,145
+ViewportId=0xAA02EECC
 Size=672,369
 Collapsed=0
 
@@ -61,7 +63,7 @@ Size=460,301
 Collapsed=0
 
 [Window][Load texture##0]
-Pos=64,53
+Pos=11,52
 Size=495,332
 Collapsed=0
 
@@ -634,9 +636,166 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xD3054736,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8F696CF2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x642FA3CD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x75D1860B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD68485E1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x61AE611A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3DC24ADE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6F576374,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x333B48B0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD87D878F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC983A249,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1C003AFE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x406C113A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAB2ADE05,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBAD4FBC3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAF0663E5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF36A4821,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x182C871E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x09D2A2D8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x30B32408,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x26CABEE2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7AA69526,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x91E05A19,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x801E7FDF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0DDA1411,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4B94FE4E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x17F8D58A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFCBE1AB5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF4FE077E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA8922CBA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x43D4E385,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE121233A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBD4D08FE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x560BC7C1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x47F5E207,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x04BDDF98,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x58D1F45C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB3973B63,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA2691EA5,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1069,46 Size=428,792 Split=Y
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x55954704
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
-DockNode    ID=0x00000004 Pos=1090,89 Size=444,399 Selected=0x29EABFBD
+DockNode      ID=0x00000003 Pos=1117,27 Size=428,720 Split=Y
+  DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=428,200 Split=Y
+    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=428,257 Selected=0x29EABFBD
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=428,140 Selected=0x55954704
+  DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=428,197 Selected=0xBC4FCFE6
 
