플레이어 효과음

--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1117,27
+ViewportPos=1116,27
 ViewportId=0x4AD707D2
 Pos=0,235
 Size=428,127
@@ -12,7 +12,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1117,27
+ViewportPos=1116,27
 ViewportId=0x4AD707D2
 Pos=0,364
 Size=428,356
@@ -20,7 +20,7 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Hierarchy]
-ViewportPos=1117,27
+ViewportPos=1116,27
 ViewportId=0x4AD707D2
 Size=428,233
 Collapsed=0
@@ -792,8 +792,56 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x0B228D69,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x574EA6AD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBC086992,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA662BD6B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFA0E96AF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x11485990,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x00B67C56,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA7A01EE9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFBCC352D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x108AFA12,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0174DFD4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x10AF28A3,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode      ID=0x00000003 Pos=1117,27 Size=428,720 Split=Y
+DockNode      ID=0x00000003 Pos=1116,27 Size=428,720 Split=Y
   DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=428,200 Split=Y
     DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=428,257 Selected=0x29EABFBD
     DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=428,140 Selected=0x55954704
