맵2 장애물 추가 체크포인트추가

--- a/Game1/Game1.vcxproj.filters
+++ b/Game1/Game1.vcxproj.filters
@@ -19,6 +19,8 @@
     <ClInclude Include="Scene1.h" />
     <ClInclude Include="SceneIntro.h" />
     <ClInclude Include="Scene2.h" />
+    <ClInclude Include="Obstacle3.h" />
+    <ClInclude Include="Obstacle3Sphere.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
@@ -38,6 +40,8 @@
     <ClCompile Include="Scene1.cpp" />
     <ClCompile Include="SceneIntro.cpp" />
     <ClCompile Include="Scene2.cpp" />
+    <ClCompile Include="Obstacle3.cpp" />
+    <ClCompile Include="Obstacle3Sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="GameObject">
