--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1016,22
+ViewportPos=1538,148
 ViewportId=0xA4D966FE
 Size=449,399
 Collapsed=0
@@ -11,7 +11,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1016,22
+ViewportPos=1538,148
 ViewportId=0xA4D966FE
 Pos=0,401
 Size=449,391
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1016,22
+ViewportPos=1538,148
 ViewportId=0xA4D966FE
 Size=449,399
 Collapsed=0
@@ -31,27 +31,28 @@ Size=606,442
 Collapsed=0
 
 [Window][Load Mesh##1]
-Pos=60,60
+ViewportPos=1141,453
+ViewportId=0xA3B4A2E7
 Size=487,424
 Collapsed=0
 
 [Window][Load Shader##0]
-Pos=60,60
+Pos=62,87
 Size=538,243
 Collapsed=0
 
 [Window][Load Actor##1]
-Pos=60,60
+Pos=46,156
 Size=650,472
 Collapsed=0
 
 [Window][Save Actor##1]
-Pos=60,60
+Pos=57,97
 Size=542,341
 Collapsed=0
 
 [Window][Save Actor##0]
-Pos=233,59
+Pos=229,86
 Size=672,369
 Collapsed=0
 
@@ -61,7 +62,7 @@ Size=460,301
 Collapsed=0
 
 [Window][Load texture##0]
-Pos=64,53
+Pos=58,85
 Size=495,332
 Collapsed=0
 
@@ -610,8 +611,260 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xB48361F8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE8EF4A3C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7EA3B1F8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x22CF9A3C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x82CC9B92,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x62F22351,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4429AE9A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2037BE48,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3E9E0895,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC426E26C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBFE004B5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6EE9215D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x32850A99,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD9C3C5A6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9E9E7C80,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF6EE46BA,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x62F2FFC0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3E9ED404,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x997930D7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC5151B13,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9C8FDE61,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC0E3F5A5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2BA53A9A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x68824D0D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xEAE613D5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x34A3A9F4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7784DE63,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC14CD016,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x845523D3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD8390817,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6F13ECEC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2C349B7B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9AFC950E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x89284845,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD5446381,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3E02ACBE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2FFC8978,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5EC9481E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8A5500D2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD6392B16,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6113CFED,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x70EDEA2B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9DA35257,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x653107F9,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x395D2C3D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x086140EB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAEB581D6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2B3D9229,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7751B9ED,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x69F80F30,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9C1776D2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8DE95314,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x38EDB12F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA085B15C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x06517061,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5A3D5BA5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB17B949A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6136761B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x98281B49,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x52C3D68C,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA096B040,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1431609D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6FF21683,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1016,22 Size=449,792 Split=Y
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,451 Selected=0x29EABFBD
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,441 Selected=0xBC4FCFE6
+DockNode    ID=0x00000001 Pos=1538,148 Size=449,792 Split=Y
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=494,399 Selected=0x29EABFBD
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=494,391 Selected=0xBC4FCFE6
 
