--- a/Game1/Game1.vcxproj
+++ b/Game1/Game1.vcxproj
@@ -25,6 +25,8 @@
     <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Obstacle1.h" />
     <ClInclude Include="Obstacle2.h" />
+    <ClInclude Include="Obstacle3.h" />
+    <ClInclude Include="Obstacle3Sphere.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene1.h" />
     <ClInclude Include="Scene2.h" />
@@ -39,6 +41,8 @@
     <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="Obstacle1.cpp" />
     <ClCompile Include="Obstacle2.cpp" />
+    <ClCompile Include="Obstacle3.cpp" />
+    <ClCompile Include="Obstacle3Sphere.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene1.cpp" />
     <ClCompile Include="Scene2.cpp" />
