--- a/Game1/Game1.vcxproj
+++ b/Game1/Game1.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Scene1.h" />
     <ClInclude Include="Scene2.h" />
+    <ClInclude Include="Scene3.h" />
     <ClInclude Include="SceneIntro.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="WallMap.h" />
@@ -46,6 +47,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene1.cpp" />
     <ClCompile Include="Scene2.cpp" />
+    <ClCompile Include="Scene3.cpp" />
     <ClCompile Include="SceneIntro.cpp" />
     <ClCompile Include="WallMap.cpp" />
   </ItemGroup>
