--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,8 +1,8 @@
 [Window][Debug##Default]
-ViewportPos=1116,27
+ViewportPos=1113,28
 ViewportId=0x4AD707D2
 Pos=0,235
-Size=428,127
+Size=427,127
 Collapsed=0
 DockId=0x00000004,0
 
@@ -12,17 +12,17 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1116,27
+ViewportPos=1113,28
 ViewportId=0x4AD707D2
 Pos=0,364
-Size=428,356
+Size=427,356
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Hierarchy]
-ViewportPos=1116,27
+ViewportPos=1113,28
 ViewportId=0x4AD707D2
-Size=428,233
+Size=427,233
 Collapsed=0
 DockId=0x00000002,0
 
@@ -52,8 +52,8 @@ Size=542,341
 Collapsed=0
 
 [Window][Save Actor##0]
-ViewportPos=625,145
-ViewportId=0xAA02EECC
+ViewportPos=475,99
+ViewportId=0x3ABDF35D
 Size=672,369
 Collapsed=0
 
@@ -840,8 +840,16 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xD8047D37,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3A9E2DCC,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode      ID=0x00000003 Pos=1116,27 Size=428,720 Split=Y
+DockNode      ID=0x00000003 Pos=1113,28 Size=427,720 Split=Y
   DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=428,200 Split=Y
     DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=428,257 Selected=0x29EABFBD
     DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=428,140 Selected=0x55954704
