--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=1116,27
+ViewportPos=937,-8
 ViewportId=0x4AD707D2
 Pos=0,235
 Size=428,127
@@ -12,7 +12,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1116,27
+ViewportPos=937,-8
 ViewportId=0x4AD707D2
 Pos=0,364
 Size=428,356
@@ -20,7 +20,7 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Hierarchy]
-ViewportPos=1116,27
+ViewportPos=937,-8
 ViewportId=0x4AD707D2
 Size=428,233
 Collapsed=0
@@ -53,9 +53,10 @@ Collapsed=0
 
 [Window][Save Actor##0]
 ViewportPos=625,145
-ViewportId=0xAA02EECC
+ViewportId=0x3ABDF35D
 Size=672,369
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Save Actor##2]
 Pos=60,61
@@ -840,10 +841,15 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xFC234D13,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode      ID=0x00000003 Pos=1116,27 Size=428,720 Split=Y
+DockNode      ID=0x00000003 Pos=937,-8 Size=428,720 Split=Y
   DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=428,200 Split=Y
     DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=428,257 Selected=0x29EABFBD
     DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=428,140 Selected=0x55954704
   DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=428,197 Selected=0xBC4FCFE6
+DockNode      ID=0x00000006 Pos=625,145 Size=672,369 Selected=0x5EDE2CCE
 
