--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,10 +1,8 @@
 [Window][Debug##Default]
-ViewportPos=937,-8
-ViewportId=0x4AD707D2
-Pos=0,235
+ViewportPos=905,256
+ViewportId=0x9F5F46A1
 Size=428,127
-Collapsed=0
-DockId=0x00000004,0
+Collapsed=1
 
 [Window][System]
 Pos=7,256
@@ -12,7 +10,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=937,-8
+ViewportPos=1113,18
 ViewportId=0x4AD707D2
 Pos=0,364
 Size=428,356
@@ -20,11 +18,11 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Hierarchy]
-ViewportPos=937,-8
+ViewportPos=1113,18
 ViewportId=0x4AD707D2
-Size=428,233
+Size=428,362
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000005,0
 
 [Window][Save Mesh##0]
 Pos=60,60
@@ -56,7 +54,6 @@ ViewportPos=625,145
 ViewportId=0x3ABDF35D
 Size=672,369
 Collapsed=0
-DockId=0x00000006,0
 
 [Window][Save Actor##2]
 Pos=60,61
@@ -845,11 +842,32 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x084852D5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x19B67713,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6CE3C076,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x2FC4B7E1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x12E66802,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x87F19179,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode      ID=0x00000003 Pos=937,-8 Size=428,720 Split=Y
-  DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=428,200 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=428,257 Selected=0x29EABFBD
-    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=428,140 Selected=0x55954704
-  DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=428,197 Selected=0xBC4FCFE6
-DockNode      ID=0x00000006 Pos=625,145 Size=672,369 Selected=0x5EDE2CCE
+DockNode    ID=0x00000003 Pos=1113,18 Size=428,720 Split=Y
+  DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=428,362 Selected=0x29EABFBD
+  DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=428,356 Selected=0xBC4FCFE6
 
