--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -10,7 +10,7 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1113,18
+ViewportPos=1266,109
 ViewportId=0x4AD707D2
 Pos=0,364
 Size=428,356
@@ -18,7 +18,7 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Hierarchy]
-ViewportPos=1113,18
+ViewportPos=1266,109
 ViewportId=0x4AD707D2
 Size=428,362
 Collapsed=0
@@ -51,7 +51,7 @@ Collapsed=0
 
 [Window][Save Actor##0]
 ViewportPos=625,145
-ViewportId=0x3ABDF35D
+ViewportId=0x4DBAC3CB
 Size=672,369
 Collapsed=0
 
@@ -866,8 +866,24 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x964D7FFC,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7D0BB0C3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x21679B07,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x87B35A3A,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000003 Pos=1113,18 Size=428,720 Split=Y
+DockNode    ID=0x00000003 Pos=1266,109 Size=428,720 Split=Y
   DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=428,362 Selected=0x29EABFBD
   DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=428,356 Selected=0xBC4FCFE6
 
