--- a/Game1/imgui.ini
+++ b/Game1/imgui.ini
@@ -1,8 +1,10 @@
 [Window][Debug##Default]
-ViewportPos=905,256
-ViewportId=0x9F5F46A1
-Size=428,127
-Collapsed=1
+ViewportPos=1044,27
+ViewportId=0x4AD707D2
+Pos=0,688
+Size=428,32
+Collapsed=0
+DockId=0x00000005,0
 
 [Window][System]
 Pos=7,256
@@ -10,19 +12,19 @@ Size=156,65
 Collapsed=0
 
 [Window][Detail]
-ViewportPos=1266,109
+ViewportPos=1044,27
 ViewportId=0x4AD707D2
-Pos=0,364
+Pos=0,330
 Size=428,356
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000002,0
 
 [Window][Hierarchy]
-ViewportPos=1266,109
+ViewportPos=1044,27
 ViewportId=0x4AD707D2
-Size=428,362
+Size=428,328
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000004,0
 
 [Window][Save Mesh##0]
 Pos=60,60
@@ -30,12 +32,12 @@ Size=606,442
 Collapsed=0
 
 [Window][Load Mesh##1]
-Pos=191,82
+Pos=188,86
 Size=487,424
 Collapsed=0
 
 [Window][Load Shader##0]
-Pos=191,82
+Pos=188,86
 Size=538,243
 Collapsed=0
 
@@ -50,8 +52,8 @@ Size=542,341
 Collapsed=0
 
 [Window][Save Actor##0]
-ViewportPos=625,145
-ViewportId=0x4DBAC3CB
+ViewportPos=450,132
+ViewportId=0x3ABDF35D
 Size=672,369
 Collapsed=0
 
@@ -61,7 +63,7 @@ Size=460,301
 Collapsed=0
 
 [Window][Load texture##0]
-Pos=11,52
+Pos=9,56
 Size=495,332
 Collapsed=0
 
@@ -882,8 +884,86 @@ Column 0  Sort=0v
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0x120FD1FD,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4E63FA39,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA5253506,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB4DB10C0,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x08D70173,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x54BB2AB7,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBFFDE588,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAE03C04E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x32E6E8E5,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD6D39354,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8ABFB890,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x61F977AF,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x70075269,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xED659830,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xB109B3F4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5A4F7CCB,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4BB1590D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xAAB11A6A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBA3FCE96,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockNode    ID=0x00000003 Pos=1266,109 Size=428,720 Split=Y
-  DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=428,362 Selected=0x29EABFBD
-  DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=428,356 Selected=0xBC4FCFE6
+DockNode      ID=0x00000003 Pos=1044,27 Size=428,720 Split=Y
+  DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=428,686 Split=Y Selected=0x29EABFBD
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=428,328 Selected=0x29EABFBD
+    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=428,356 Selected=0xBC4FCFE6
+  DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=428,32 HiddenTabBar=1 Selected=0x55954704
 
